--- a/Focus2012/res/layout/button_bar_list_item.xml
+++ b/Focus2012/res/layout/button_bar_list_item.xml
@@ -8,15 +8,18 @@
     <Button
         android:id="@+id/button1"
         style="@style/share_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/button2"
         style="@style/share_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/button3"
+        style="@style/share_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
