--- a/Focus2012/res/layout/button_bar_list_item.xml
+++ b/Focus2012/res/layout/button_bar_list_item.xml
@@ -9,17 +9,20 @@
         android:id="@+id/button1"
         style="@style/share_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="0.33" />
 
     <Button
         android:id="@+id/button2"
         style="@style/share_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="0.33" />
 
     <Button
         android:id="@+id/button3"
         style="@style/share_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="0.33" />
 </LinearLayout>
