--- a/Conference2013/res/values/tabs.xml
+++ b/Conference2013/res/values/tabs.xml
@@ -3,7 +3,7 @@
     <string name="home_tab">Home</string>
     <string name="speakers_tab">Speakers</string>
     <string name="programme_tab">Programme</string>
-    <string name="diary_tab">Diary</string>
+    <string name="diary_tab">Programme</string>
     <string name="maps_tab">Venues</string>
     <string name="more_tab">More</string>
 </resources>
